base/service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    app: codeblue
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
