base/ingress.yaml
  # ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: ingress
    annotations:
      nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
      nginx.ingress.kubernetes.io/proxy-body-size: "100m"
  spec:
    ingressClassName: nginx
    rules:
    - host: aidotech.in
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: codeblue-service
              port:
                number: 80
